WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246430
Regression(
252759@main
) Unable to log into pandora.com
https://bugs.webkit.org/show_bug.cgi?id=246430
Summary
Regression(252759@main) Unable to log into pandora.com
Chris Dumez
Reported
2022-10-12 15:39:52 PDT
Unable to log into pandora.com since un-exposing window.showModalDialog() in
252759@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-10-12 15:40:13 PDT
<
rdar://100243111
>
Chris Dumez
Comment 2
2022-10-12 15:55:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5307
EWS
Comment 3
2022-10-13 19:10:16 PDT
Committed
255521@main
(93d276254db4): <
https://commits.webkit.org/255521@main
> Reviewed commits have been landed. Closing PR #5307 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug